homepage: fix layout shift culprit

--- a/homepage/styles.css
+++ b/homepage/styles.css
@@ -14,7 +14,7 @@ figure {
 
 .avatar {
   display: block;
-  max-height: 160px;
+  height: 160px;
   width: auto;
   margin: 0 auto;
 }
